[UTF-8][Japanese]

*Ver3.40 : 2020/xx/xx

-SpeedyCGI用の起動スクリプトを削除しました。

*Ver3.34 : 2020/01/18

-【Windows】サービス起動用ラッパーを開発しました。
-【Markdown】記法ヘルパーのリンク挿入をmarkdown形式に変更。
-【Plugin】新着コメントのメール通知に、記事タイトルを表記するよう変更。
-【Fix/Plugin】リンク集等の設定画面を2度目以降開くとエラーになる。
-【Fix/Plugin】2020年のカレンダーの祝日情報が正しくない。（[https://adiary.adiary.jp/0416#c1:Thanks to さばぞう]）

*Ver3.33 : 2020/01/09

-記事エクスポートの改善。
-【Fix】アルバムで同じダイアログを2度開けない。
-【Fix】一部のテーマで、アルバム等のフォルダ階層の表示位置が正しくない。

*Ver3.32 : 2019/12/30

-静的出力時に記事一覧や年月別の記事リストを生成する機能を追加。（[https://adiary.adiary.jp/0414#c4:Thanks to Hansen]）
-タグツリー、コンテンツツリーを一括で閉じるボタンを追加。
-【スマホ】ドラッグアンドドロップの操作性を改善しました。
-【Plugin】【ja】カレンダーの祝日（天皇誕生日）を変更しました。
-【記法】script-deferブロック記法を追加。
-【記法/Fix】Google画像検索等のURLを変更しました((過去記事に対しては、ブログ記事の再構築が必要です。))。（[https://adiary.adiary.jp/0414#c7:Thanks to jimba]）
-【Fix】ブログ一覧のテーブル表示でソートカラムを選択すると画面が切り替わる。

*Ver3.31d : 2019/11/24

-adiary.jsをリファクタリングしました。
--jQuery等のjsライブラリとまとめて、adiary.min.js に minify しました。
--テキストボックスのリサイズ等いくつか機能を削除しました。
--dailogを自作して、jQuery UIへの依存度を下げました。
-テーマ、CSS関連
--ui-iconをJavaScriptで生成するよう変更（pub-dist/ui-icon/ 画像ファイルを削除）
--別で読み込んでいた Lightbox.css を削除し、関連画像のロードも減らしました。
--Ver2以前との互換のための画像アイコンを削除。((記法のほうは残してあるので、画像ファイルだけ展開すれば使えます。))
-ドロップダウンメニューの内部仕様を更新しました。
--CSS仕様を整理。
--JavaScriptを使わず中央等の位置調整するように変更。
--いくつかのテーマで表示が崩れていた問題を修正。
-Cookie設定時に「httpOnly」と「SameSite=Lax」を設定するようにしました（セキュリティ対策）。
-インポートログをボタンの近くに表示するようにしました。
-【テーマ】いくつかのテーマで画像を埋め込み等最適化しました。
-【記法】Ver3.30で削除していたインラインでtargetを指定する記法を再び使用可能にしました。
-【記法】[https://adiary.org/v3man/Satsuki-detail/mahjong:麻雀記法]をより使いやすく拡張しました。
-【記法】入れ子タグの解釈が間違っていた（後方一致検索をしていた）。
-【Plugin】設定リセット機能をつけました。
-【Plugin/des_twitter】管理画面で非表示にしました。
-【Fix】HTTP.pmのtypoを修正（[https://adiary.adiary.jp/0410#c1:Thanks to t-hide]）
-【Fix】デザイン編集でタイミングにより二重に初期化してしまうことがある。
-【Fix】月別記事リストのドロップボックス表示時のリンクが正しくない。（Ver3.20以降）
-【Fix】記事一覧画面でログインしていない時もメニューへのリンクが出る。
-【Fix】記事一覧画面から記事の表示/非表示を変更した際、タグ内の記事数が狂う。
-【Fix】デフォルトブログでソーシャルアイコン等のリンクが正しくない（[https://adiary.adiary.jp/0410#c7:Thanks to やす]）
-【Fix】【sumomoテーマ】幅480pxのタブレット等で必要な画像が表示されない。