@@ -3,6 +3,7 @@
 *Ver3.40 : 2020/xx/xx
 
 -SpeedyCGI用の起動スクリプトを削除しました。
+-【httpd】パス設定機能を付けました。これにより Reverse Proxy での運用が楽になります。
 
 *Ver3.34 : 2020/01/18
 
